# runcore

./: BUGS.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: configuration.md  environment.md
src/runtools/runcore/: __init__.py  client.py  common.py  connector.py  constants.py  criteria.py  env.py  environment.py  err.py  job.py  jobrepo.py  layout.py  listening.py  matching.py  output.py  paths.py  plugins.py  proxy.py  remote.py  retention.py  run.py  status.py  track.py
src/runtools/runcore/config/: env.toml
src/runtools/runcore/db/: __init__.py  persister.py  postgres.py  sql.py  sqlite.py
src/runtools/runcore/output/: __init__.py  file.py  s3.py
src/runtoolsio/runcore/: __init__.py  cfg.py  client.py  common.py  criteria.py  job.py  jobrepo.py  listening.py  log.py  paths.py  persistence.py  plugins.py  run.py  track.py
test/: test_cfgfile.py  test_connector.py  test_criteria.py  test_criterion_id.py  test_criterion_meta.py  test_db_discovery.py  test_directory.py  test_env.py  test_event_router.py  test_event_synthesis.py  test_instance_id.py  test_lock.py  test_matching.py  test_output.py  test_output_s3.py  test_persistence.py  test_plugins.py  test_polling_directory.py  test_postgres.py  test_proxy.py  test_repo.py  test_run_lifecycle.py  test_run_phaser.py  test_snapshot_proxy.py  test_sqlite.py  test_status.py  test_tags.py  test_term.py  test_track.py  test_util_dt.py  test_util_idx_parser.py  test_util_kv_parser.py  test_util_parser.py  test_util_size.py  test_util_text.py
test/plugins/test_plugin/: __init__.py
(+33 files in other folders)
