[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "runtoolsio-runcore"
authors = [{name = "Stan Svec", email = "dev@stansvec.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.12"
dynamic = ["version", "description"]
dependencies = [
    "pydantic>=2.11.3",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]
test = ["pytest", "moto[s3]>=5.0"]

[tool.flit.module]
name = "runtools.runcore"

[tool.pytest.ini_options]
pythonpath = "src"

[project.urls]
Home = "https://github.com/runtoolsio/runcore"
